# Trabalho-APACHE-SPARK-COM-MINIO-e-SQL

./: .env.example  .gitignore  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: index.md
sql/init/: 01_schema.sql
src/trabalho2/: __init__.py  cli.py  pipeline.py  settings.py
tests/: test_settings.py
