[project]
name = "trabalho2-spark-minio-delta"
version = "0.1.0"
description = "Pipeline do Trabalho 2: PostgreSQL -> MinIO CSV -> Delta Lake"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "boto3>=1.34.0,<2",
  "delta-spark==3.2.0",
  "pyspark==3.5.3",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
